# bitranox_template_cli_app_config_log_mail

./: CHANGELOG.md  README.md  pyproject.toml
scripts/: _utils.py
src/bitranox_template_cli_app_config_log_mail/: __init__conf__.py  __main__.py  cli.py  config.py  config_deploy.py  config_show.py  defaultconfig.toml  logging_setup.py
tests/: conftest.py  test_behaviors.py  test_cli.py  test_mail.py  test_module_entry.py  test_scripts.py
